<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SizeChoiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <Button
            android:id="@+id/button_small"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="256dp"
            android:background="@drawable/button_background_light"
            android:fontFamily="@font/amaticbold"
            android:text="@string/size_small"
            android:textColor="@color/colorBackground"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_medium"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background_medium"
            android:fontFamily="@font/amaticbold"
            android:text="@string/size_medium"
            android:textColor="@color/colorBackground"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_small" />

        <Button
            android:id="@+id/button_big"
            android:layout_width="200dp"
            android:layout_marginTop="30dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background_dark"
            android:fontFamily="@font/amaticbold"
            android:text="@string/size_big"
            android:textColor="@color/colorBackground"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_medium" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>